--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -27,5 +27,5 @@ license="${mod_license}"
     modId="create"
     type="required"
     versionRange="[6.0.4,6.1.0)"
-    ordering="NONE"
+    ordering="AFTER"
     side="BOTH"
