--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -29,3 +29,6 @@ license="${mod_license}"
     versionRange="[6.0.4,6.1.0)"
     ordering="AFTER"
     side="BOTH"
+
+[[mixins]]
+    config = "createlimited.mixins.json"
