--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ mod_version=1.0.0
 
 mod_group_id=net.orion.create_limited
 mod_authors=Orion
-mod_description=Create: Limited, limits SU gain.
+mod_description=Create: Limited, limits SU generation lifespan, goodluck!\nDegradation never hits all at once ,it settles in, while we look the other way. - f1re
